<resources>
    <string name="app_name">كفالة</string>
    <string name="have_account">لديك حساب ؟</string>
    <string name="login">دخول</string>
    <string name="tv_user_name">الاسم</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="password_confirmation">تأكيد كلمة المرور</string>
    <string name="register">تسجيل</string>
    <string name="get_password">استعادة كلمة المرور</string>
    <string name="activation_code">كود التفعيل</string>
    <string name="skip">تخطى</string>
    <string name="tv_for_account_activation">لتفعيل حسابك</string>
    <string name="enter_the_number_sent_through_sms">أدخل ارقم الذى وصلك عبر رسالة SMS</string>
    <string name="restore_password">لأستعادة كلمة المرور أدخل رقم الجوال المسجل</string>
    <string name="restor">أستعادة</string>
    <string name="tv_search_for_city">البحث عن مدينة</string>
    <string name="home">الرئيسية</string>
    <string name="search_for_kafel">البحث عن كفيل</string>
    <string name="search_for_makfol">البحث عن مكفول</string>
    <string name="about">من نحن</string>
    <string name="bank_accounts">الحسابات البنكية</string>
    <string name="call_us">اتصل بنا</string>
    <string name="register_text">إنشاء حساب</string>
    <string name="choose_city">أختر مدينة</string>
    <string name="enter_all_data">من فضلك أدخل كل البيانات</string>
    <string name="minimum_password_length">كلمة السر يجب ان لا تقل عن 6 حروف</string>
    <string name="password_must_be_matches">كلمة السر وتأكيدها يجب ان يكونوا متطابقين</string>
    <string name="مخلهى">تسجيل الدخول</string>
    <string name="account_activation">تفعيل الحساب</string>
    <string name="restore_password_title">إستعادة كلمة المرور</string>
    <string name="search_for">البحث عن</string>
    <string name="makfool">مكفول</string>
    <string name="kafeel">كفيل</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="who_are_we">من نحن</string>
    <string name="bank_acconts">الحسابات البنكية</string>
    <string name="personal_info">البيانات الشخصية</string>
    <string name="change_password">تغير كلمة المرور</string>
    <string name="save_changes">حفظ التعديلات</string>
    <string name="logout">خروج</string>
    <string name="logout_text">تسجيل الخروج</string>
    <string name="my_adv">أعلاناتى</string>
    <string name="personal_info_title">الملف الشخصى</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="change_password_text">تغير كلمة المرور</string>
    <string name="notifications">الأشعارات</string>
    <string name="nationality">الجنسية</string>
    <string name="choosed_natinality">أختر الجنسية</string>
    <string name="choosed_category">أختر المهنة</string>
    <string name="category">المهنة</string>
    <string name="call_info">وسيلة الاتصال</string>
    <string name="additional_info">معلومات أضافية</string>
    <string name="send">إرسال</string>
    <string name="enter_all_required_data">أدخل جميع البيانات المطلوبة</string>
    <string name="choose_category">أختر مهنة</string>
    <string name="choose_nationality">أختر جنسية</string>
    <string name="search_for_kafeel">البحث عن كفيل</string>
    <string name="accept_agreement">الموافقة على التعهد</string>
    <string name="search_results">نتائج البحث</string>
    <string name="edit_post">تعديل الاعلان</string>
</resources>
