<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_color">

        <include android:id="@+id/toolbar"
                 layout="@layout/custom_toobar_layout"/>

        <TextView android:id="@+id/tv_enter_number"
                  android:layout_width="wrap_content"
                  android:textColor="@color/register_tv_color"
                  android:layout_height="wrap_content"
                  android:text="@string/restore_password"
                  app:layout_constraintTop_toBottomOf="@+id/toolbar"
                  android:layout_marginTop="12dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_enter_number"
                android:layout_marginTop="12dp"
                android:paddingBottom="18dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp">


            <TextView android:id="@+id/tv_code"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginTop="12dp"
                      android:text="@string/phone_number"
                      android:gravity="center"
                      android:textColor="@color/register_tv_color"/>

            <EditText android:id="@+id/et_activation_code"
                      android:layout_width="0dp"
                      android:gravity="left"
                      android:layout_height="wrap_content"
                      android:textDirection="locale"
                      android:inputType="phone"
                      android:layout_marginTop="12dp"
                      tools:text="01128257760"
                      android:textSize="14sp"
                      android:paddingEnd="8dp"
                      android:textColor="@color/register_tv_color"
                      android:background="@android:color/transparent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/tv_code"/>

            <View android:id="@+id/view2"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="12dp"
                  app:layout_constraintTop_toBottomOf="@+id/et_activation_code"
                  android:background="@color/gray_color"/>

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/restor"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="18dp"
                    app:layout_constraintTop_toBottomOf="@+id/view2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>