<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_color"
            android:id="@+id/container">

        <include
                android:id="@+id/toolbar"
                layout="@layout/custom_toobar_layout"/>

        <TextView android:id="@+id/tv_have_account"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/have_account"
                  android:textStyle="bold"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/toolbar"
                  android:layout_marginStart="20dp"
                  android:layout_marginTop="16dp"

                  android:textColor="@color/register_tv_color"
        />

        <TextView android:id="@+id/tv_login"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/login"
                  android:textColor="@color/secondary_red_color"
                  android:layout_marginStart="8dp"
                  android:layout_marginTop="16dp"
                  app:layout_constraintStart_toEndOf="@+id/tv_have_account"
                  app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:background="@android:color/white"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           app:layout_constraintTop_toBottomOf="@+id/tv_have_account"
                                                           android:layout_marginTop="12dp"
                                                           android:paddingBottom="18dp"
                                                           android:paddingEnd="12dp"
                                                           android:paddingStart="12dp">

            <TextView android:id="@+id/tv_username"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:text="@string/tv_user_name"
                      android:gravity="center"
                      android:layout_marginTop="12dp"
                      android:textColor="@color/register_tv_color"/>

            <EditText android:id="@+id/et_user_name"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:gravity="left"
                      android:layout_marginTop="12dp"
                      tools:text="بهاء علاء السيد"
                      android:inputType="text"
                      android:textSize="14sp"
                      android:paddingEnd="8dp"
                      android:textColorHint="@color/register_edittext_color"
                      android:textColor="@color/register_tv_color"
                      android:background="@android:color/transparent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/tv_username"/>

            <View android:id="@+id/view1"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/et_user_name"
                  android:layout_marginTop="12dp"
                  android:background="@color/gray_color"/>

            <TextView android:id="@+id/tv_phone_number"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/view1"
                      android:layout_marginTop="12dp"
                      android:text="@string/phone_number"
                      android:gravity="center"
                      android:textColor="@color/register_tv_color"/>

            <EditText android:id="@+id/et_phone_number"
                      android:layout_width="0dp"
                      android:gravity="left"
                      android:layout_height="wrap_content"
                      android:textDirection="locale"
                      android:inputType="phone"
                      android:textSize="14sp"
                      android:layout_marginTop="12dp"
                      tools:text="01128257760"
                      android:paddingEnd="8dp"
                      android:textColorHint="@color/register_edittext_color"
                      android:textColor="@color/register_tv_color"
                      android:background="@android:color/transparent"
                      app:layout_constraintTop_toBottomOf="@+id/view1"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/tv_phone_number"/>

            <View android:id="@+id/view2"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="12dp"
                  app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
                  android:background="@color/gray_color"/>

            <TextView android:id="@+id/tv_city"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/view2"
                      android:layout_marginTop="12dp"
                      android:text="المدينة"
                      android:gravity="center"
                      android:textColor="@color/register_tv_color"/>

            <ImageView android:id="@+id/iv_arrow"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="15dp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/view2"
                       android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>

            <TextView android:id="@+id/tv_chosed_city"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/view2"
                      android:text="@string/choose_city"
                      android:paddingEnd="8dp"
                      android:paddingStart="8dp"
                      android:layout_marginTop="12dp"
                      android:textColor="@color/register_tv_color"
                      app:layout_constraintEnd_toStartOf="@+id/iv_arrow"/>

            <View android:id="@+id/view3"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="12dp"
                  app:layout_constraintTop_toBottomOf="@+id/tv_city"
                  android:background="@color/gray_color"/>

            <TextView android:id="@+id/tv_password"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/view3"
                      android:layout_marginTop="12dp"
                      android:text="@string/password"
                      android:gravity="center"
                      android:textColor="@color/register_tv_color"/>

            <EditText android:id="@+id/et_password"
                      android:layout_width="0dp"
                      android:gravity="left"
                      android:layout_height="wrap_content"
                      android:textDirection="locale"
                      android:textSize="14sp"
                      android:inputType="textPassword"
                      android:layout_marginTop="12dp"
                      tools:text="01128257760"
                      android:paddingEnd="8dp"
                      android:paddingStart="8dp"
                      android:textColorHint="@color/register_edittext_color"
                      android:textColor="@color/register_tv_color"
                      android:background="@android:color/transparent"
                      app:layout_constraintTop_toBottomOf="@+id/view3"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/tv_password"/>

            <View android:id="@+id/view4"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="12dp"
                  app:layout_constraintTop_toBottomOf="@+id/et_password"
                  android:background="@color/gray_color"/>

            <TextView android:id="@+id/tv_password_confirmation"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/view4"
                      android:layout_marginTop="12dp"
                      android:text="@string/password_confirmation"
                      android:gravity="center"
                      android:textColor="@color/register_tv_color"/>

            <EditText android:id="@+id/et_password_confirm"
                      android:layout_width="0dp"
                      android:gravity="left"
                      android:layout_height="wrap_content"
                      android:textDirection="locale"
                      android:inputType="textPassword"
                      android:layout_marginTop="12dp"
                      tools:text="01128257760"

                      android:paddingEnd="8dp"
                      android:textSize="14sp"
                      android:paddingStart="8dp"
                      android:textColorHint="@color/register_edittext_color"
                      android:textColor="@color/register_tv_color"
                      android:background="@android:color/transparent"
                      app:layout_constraintTop_toBottomOf="@+id/view4"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/tv_password_confirmation"/>

            <View android:id="@+id/view5"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="12dp"
                  app:layout_constraintTop_toBottomOf="@+id/et_password_confirm"
                  android:background="@color/gray_color"/>

            <Button android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/register"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="18dp"
                    app:layout_constraintTop_toBottomOf="@+id/view5"/>

            <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/avi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AVLoadingIndicatorView"
                    android:visibility="gone"
                    app:indicatorName="BallPulseIndicator"
                    app:indicatorColor="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>