<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_color"
            android:id="@+id/container">

        <include
                android:id="@+id/toolbar"
                layout="@layout/custom_toobar_layout"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                android:layout_marginTop="36dp"
                android:paddingBottom="18dp"
                android:paddingEnd="12dp"
                android:paddingStart="12dp">


            <TextView android:id="@+id/tv_phone_number"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginTop="12dp"
                      android:text="@string/phone_number"
                      android:gravity="center"
                      android:textColor="@color/register_tv_color"/>

            <EditText android:id="@+id/et_phone_number"
                      android:layout_width="0dp"
                      android:gravity="left"
                      android:textSize="14sp"
                      android:layout_height="wrap_content"
                      android:textDirection="locale"
                      android:inputType="phone"
                      android:layout_marginTop="12dp"
                      tools:text="0178777888"
                      android:paddingStart="8dp"
                      android:textColor="@color/register_tv_color"
                      android:background="@android:color/transparent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/tv_phone_number"/>

            <View android:id="@+id/view2"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="12dp"
                  app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
                  android:background="@color/gray_color"/>

            <TextView android:id="@+id/tv_password"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/view2"
                      android:layout_marginTop="12dp"
                      android:text="@string/password"
                      android:gravity="center"
                      android:textColor="@color/register_tv_color"/>

            <EditText android:id="@+id/et_password"
                      android:layout_width="0dp"
                      android:gravity="left"
                      android:textSize="14sp"
                      android:layout_height="wrap_content"
                      android:textDirection="locale"
                      android:inputType="textPassword"
                      android:layout_marginTop="12dp"
                      android:textColor="@color/register_tv_color"
                      tools:text="01128257760"
                      android:paddingEnd="8dp"
                      android:paddingStart="8dp"
                      android:background="@android:color/transparent"
                      app:layout_constraintTop_toBottomOf="@+id/view2"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/tv_password"/>

            <View android:id="@+id/view4"
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="12dp"
                  app:layout_constraintTop_toBottomOf="@+id/et_password"
                  android:background="@color/gray_color"/>

            <Button android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/login"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="18dp"
                    app:layout_constraintTop_toBottomOf="@+id/view4"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView android:id="@+id/tv_get_password"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/get_password"
                  android:textColor="@color/secondary_red_color"
                  android:layout_marginStart="16dp"
                  android:layout_marginTop="16dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/login_container"/>

        <TextView android:id="@+id/tv_have_no_account"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="ليس لديك حساب ؟"
                  android:textColor="@color/register_tv_color"
                  android:textStyle="bold"
                  android:layout_marginStart="32dp"
                  android:layout_marginTop="50dp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/tv_get_password"/>

        <TextView android:id="@+id/tv_register_new_account"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="إنشاء حساب جديد"
                  android:textColor="@color/secondary_red_color"
                  android:layout_marginEnd="32dp"
                  android:layout_marginTop="50dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/tv_get_password"/>

        <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AVLoadingIndicatorView"
                android:visibility="gone"
                app:indicatorName="BallPulseIndicator"
                app:indicatorColor="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>